[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tony ElHabr <anthonyelhabr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.25"
pyscopg2 = "^66.0.2"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
selenium = "^4.12.0"
bs4 = "^0.0.2"
types-beautifulsoup4 = "^4.12.0.20240106"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
mypy = "^1.5.1"
ruff = "^0.1.13"
pandas-stubs = "^2.1.4.231227"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
